--- a/src/t2fa_app/app/src/main/AndroidManifest.xml
+++ b/src/t2fa_app/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".NotificationPublisher" />
+        <receiver android:name=".Notification.NotificationPublisher" />
     </application>
 
 </manifest>
