--- a/src/t2fa_app/app/src/main/AndroidManifest.xml
+++ b/src/t2fa_app/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.T2fa_app">
+        <activity android:name=".AuthActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
